Add directory content list

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,7 +8,10 @@
         "example": "Bob"
       }
     }
-  }
+  },
+  "fsEntitiesTableHeaderName": "Name",
+  "fsEntitiesTableHeaderDate": "Date",
+  "fsEntitiesTableHeaderType": "Type"
 }
 
 
