Add context menus

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,7 +11,13 @@
   },
   "fsEntitiesTableHeaderName": "Name",
   "fsEntitiesTableHeaderDate": "Date",
-  "fsEntitiesTableHeaderType": "Type"
+  "fsEntitiesTableHeaderType": "Type",
+
+  "tabLabelBlank": "New Tab",
+
+  "contextMenuCopy": "Copy",
+  "contextMenuCut": "Cut",
+  "contextMenuPaste": "Paste"
 }
 
 
