Add task control

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,7 +17,15 @@
 
   "contextMenuCopy": "Copy",
   "contextMenuCut": "Cut",
-  "contextMenuPaste": "Paste"
+  "contextMenuPaste": "Paste",
+
+  "taskListTitleLabel": "Tasks",
+  "taskStatusWaiting": "Waiting",
+  "taskStatusRunning": "Running",
+  "taskStatusPaused": "Paused",
+  "taskStatusDone": "Done",
+  "taskStatusFailed": "Failed",
+  "taskStatusTerminated": "Cancelled"
 }
 
 
