--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -17,7 +17,15 @@
 
   "contextMenuCopy": "复制",
   "contextMenuCut": "剪切",
-  "contextMenuPaste": "粘贴"
+  "contextMenuPaste": "粘贴",
+
+  "taskListTitleLabel": "任务",
+  "taskStatusWaiting": "等待",
+  "taskStatusRunning": "正在处理",
+  "taskStatusPaused": "已暂停",
+  "taskStatusDone": "已完成",
+  "taskStatusFailed": "已失败",
+  "taskStatusTerminated": "已取消"
 }
 
 
