Add delete and rename context menu

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,8 @@
   "contextMenuCopy": "Copy",
   "contextMenuCut": "Cut",
   "contextMenuPaste": "Paste",
+  "contextMenuDelete": "Delete",
+  "contextMenuRename": "Rename",
 
   "taskListTitleLabel": "Tasks",
   "taskStatusWaiting": "Waiting",
