Add: switch theme and settings page frame

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -31,7 +31,9 @@
   "taskStatusPaused": "Paused",
   "taskStatusDone": "Done",
   "taskStatusFailed": "Failed",
-  "taskStatusTerminated": "Cancelled"
+  "taskStatusTerminated": "Cancelled",
+
+  "settingsTitle": "Settings"
 }
 
 
