Add sbc register

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -43,9 +43,25 @@
   "settingsKeymap": "Keymap",
   "settingsExtensions": "Extensions",
   "settingsAdvancedSettings": "Advanced Settings",
+  "settingsAccountSettings": "Account Settings",
   "settingsOk": "OK",
   "settingsCancel": "Cancel",
-  "settingsApply": "Apply"
+  "settingsApply": "Apply",
+  "settingsSbcApiHostLabel": "Sbc Api Host",
+
+  "loggedInLabel": "Logged In",
+  "loginButtonLabel": "Login",
+  "registerButtonLabel": "Register",
+
+  "registerFormLabel": "Register",
+  "registerFormEmailLabel": "Email",
+  "registerFormPasswordLabel": "Password",
+  "registerFormSubmitLabel": "Register",
+
+  "loginFormLabel": "Login",
+  "loginFormEmailLabel": "Email",
+  "loginFormPasswordLabel": "Password",
+  "loginFormSubmitLabel": "Login"
 }
 
 
