Add md home nav tree

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -61,7 +61,12 @@
   "loginFormLabel": "Login",
   "loginFormEmailLabel": "Email",
   "loginFormPasswordLabel": "Password",
-  "loginFormSubmitLabel": "Login"
+  "loginFormSubmitLabel": "Login",
+
+  "markdownEditLabel": "Edit",
+  "markdownPreviewLabel": "Preview",
+  "markdownDataEmptyText": "No contents",
+  "markdownNewCollectButtonLabel": "Create new collection"
 }
 
 
