--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -66,7 +66,9 @@
   "markdownEditLabel": "Edit",
   "markdownPreviewLabel": "Preview",
   "markdownDataEmptyText": "No contents",
-  "markdownNewCollectButtonLabel": "Create new collection"
+  "markdownNewCollectButtonLabel": "Create new collection",
+  "markdownNewSubCollectButtonLabel": "Create sub collection",
+  "markdownNewDocumentButtonLabel": "Create new document"
 }
 
 
