Add logout feature

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -63,6 +63,8 @@
   "loginFormPasswordLabel": "Password",
   "loginFormSubmitLabel": "Login",
 
+  "logoutLabel": "Logout",
+
   "markdownEditLabel": "Edit",
   "markdownPreviewLabel": "Preview",
   "markdownDataEmptyText": "No contents",
