Index settings pages with nav tree

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -43,6 +43,8 @@
   "settingsKeymap": "Keymap",
   "settingsExtensions": "Extensions",
   "settingsAdvancedSettings": "Advanced Settings",
+  "settingsAdvancedSandbarClientNodeConfig": "Sandbar Client",
+  "settingsAdvancedSandbarClientDataLocation": "Data Location",
   "settingsAccountSettings": "Account Settings",
   "settingsOk": "OK",
   "settingsCancel": "Cancel",
