Complete add to sandbar fs feature

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,7 @@
   "contextMenuCopy": "Copy",
   "contextMenuCut": "Cut",
   "contextMenuPaste": "Paste",
+  "contextMenuAddToSandbarFs": "Add To SandbarFS",
   "contextMenuDelete": "Delete",
   "contextMenuRename": "Rename",
   "contextMenuNewFolder": "New folder",
