feat(fs): Add favorite dir support rename alias.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,6 +11,8 @@
   },
 
   "fsFavoriteTitle": "Favorites",
+  "addFavoriteTitle": "Add Favorite （You can rename it to alias)",
+  "addFavoriteNameAlias": "Favorite Name Alias",
   "fsDiskTitle": "Disk",
   "fsMyComputerTitle": "This machine",
 
